fix swagger tags name
