# docs/swagger/swagger.json
@@ -7,7 +7,9 @@
   },
   "host": "localhost:8080",
   "basePath": "/",
-  "schemes": ["http"],
+  "schemes": [
+    "http"
+  ],
   "securityDefinitions": {
     "oauth2": {
       "type": "oauth2",
@@ -19,7 +21,9 @@
   "paths": {
     "/": {
       "get": {
-        "tags": ["Home"],
+        "tags": [
+          "Home"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -30,7 +34,9 @@
     },
     "/logout": {
       "get": {
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "description": "",
         "responses": {
           "default": {
@@ -41,9 +47,13 @@
     },
     "/leads/": {
       "get": {
-        "tags": ["Leads"],
+        "tags": [
+          "Leads"
+        ],
         "description": "",
-        "produces": ["application/json"],
+        "produces": [
+          "application/json"
+        ],
         "responses": {
           "400": {
             "description": "Bad Request"
@@ -51,7 +61,9 @@
         }
       },
       "post": {
-        "tags": ["Leads"],
+        "tags": [
+          "Leads"
+        ],
         "description": "",
         "parameters": [
           {
@@ -103,9 +115,13 @@
     },
     "/leads/{id}": {
       "get": {
-        "tags": ["Leads"],
+        "tags": [
+          "Leads"
+        ],
         "description": "",
-        "produces": ["application/json"],
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "id",
@@ -121,7 +137,9 @@
         }
       },
       "put": {
-        "tags": ["Leads"],
+        "tags": [
+          "Leads"
+        ],
         "description": "",
         "parameters": [
           {
@@ -177,7 +195,9 @@
         }
       },
       "delete": {
-        "tags": ["Leads"],
+        "tags": [
+          "Leads"
+        ],
         "description": "",
         "parameters": [
           {
@@ -202,9 +222,13 @@
     },
     "/companies/": {
       "get": {
-        "tags": ["Companies"],
+        "tags": [
+          "Companies"
+        ],
         "description": "",
-        "produces": ["application/json"],
+        "produces": [
+          "application/json"
+        ],
         "responses": {
           "400": {
             "description": "Bad Request"
@@ -212,7 +236,9 @@
         }
       },
       "post": {
-        "tags": ["Companies"],
+        "tags": [
+          "Companies"
+        ],
         "description": "",
         "parameters": [
           {
@@ -261,7 +287,9 @@
     },
     "/companies/{id}": {
       "put": {
-        "tags": ["Companies"],
+        "tags": [
+          "Companies"
+        ],
         "description": "",
         "parameters": [
           {
@@ -314,7 +342,9 @@
         }
       },
       "delete": {
-        "tags": ["Companies"],
+        "tags": [
+          "Companies"
+        ],
         "description": "",
         "parameters": [
           {
@@ -339,8 +369,13 @@
     },
     "/campaigns/": {
       "get": {
+        "tags": [
+          "Campaigns"
+        ],
         "description": "",
-        "produces": ["application/json"],
+        "produces": [
+          "application/json"
+        ],
         "responses": {
           "400": {
             "description": "Bad Request"
@@ -348,6 +383,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Campaigns"
+        ],
         "description": "",
         "parameters": [
           {
@@ -387,6 +425,9 @@
     },
     "/campaigns/{id}": {
       "put": {
+        "tags": [
+          "Campaigns"
+        ],
         "description": "",
         "parameters": [
           {
@@ -430,6 +471,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Campaigns"
+        ],
         "description": "",
         "parameters": [
           {
@@ -454,9 +498,13 @@
     },
     "/tags/": {
       "get": {
-        "tags": ["Tags"],
+        "tags": [
+          "Tags"
+        ],
         "description": "",
-        "produces": ["application/json"],
+        "produces": [
+          "application/json"
+        ],
         "responses": {
           "400": {
             "description": "Bad Request"
@@ -464,7 +512,9 @@
         }
       },
       "post": {
-        "tags": ["Tags"],
+        "tags": [
+          "Tags"
+        ],
         "description": "",
         "parameters": [
           {
@@ -498,7 +548,9 @@
     },
     "/tags/{id}": {
       "put": {
-        "tags": ["Tags"],
+        "tags": [
+          "Tags"
+        ],
         "description": "",
         "parameters": [
           {
@@ -536,7 +588,9 @@
         }
       },
       "delete": {
-        "tags": ["Tags"],
+        "tags": [
+          "Tags"
+        ],
         "description": "",
         "parameters": [
           {
